add new vote logic and controller
